# taycan-openenv-food-supply-chain

./: Dockerfile  LICENSE  README.md  app.py  env.py  inference.py  main.py  openenv.yaml  pyproject.toml
server/: app.py
