[project]
name = "taycan-openenv-food-supply-chain"
version = "0.1.0"
description = "OpenEnv Food Supply Chain Optimization Environment"
authors = [
    { name = "Deekshanya Shri L" },
    { name = "Shanney Maria Simon" },
    { name = "Pratheeksha Shalbin" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

[tool.uvicorn]
app = "app:app"
host = "0.0.0.0"
port = 7860

[project.scripts]
server = "app:app"
